Remove scrollbar buttons, fix scrollbar theme in firefox

--- a/res/include/style/layout.css
+++ b/res/include/style/layout.css
@@ -581,37 +581,40 @@ input[type=file]{
 	width: 10px;
 }
 ::-webkit-scrollbar-button:single-button:vertical:decrement {
-	border-width: 0 8px 8px 8px;
-	border-color: transparent transparent var(--scrollbar_foreground_color) transparent;
+	display: none;
+	/* border-width: 0 8px 8px 8px; */
+	/* border-color: transparent transparent var(--scrollbar_foreground_color) transparent; */
 }
-::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
+/* ::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
 	border-color: transparent transparent var(--scrollbar_hover_color) transparent;
-}
+} */
 ::-webkit-scrollbar-button:single-button:vertical:increment {
-	border-width: 8px 8px 0 8px;
-	border-color: var(--scrollbar_foreground_color) transparent transparent transparent;
+	display: none;
+	/* border-width: 8px 8px 0 8px; */
+	/* border-color: var(--scrollbar_foreground_color) transparent transparent transparent; */
 }
-::-webkit-scrollbar-button:vertical:single-button:increment:hover {
+/* ::-webkit-scrollbar-button:vertical:single-button:increment:hover {
 	border-color: var(--scrollbar_hover_color) transparent transparent transparent;
-}
+} */
 ::-webkit-scrollbar-button:single-button:horizontal:decrement {
-	border-width: 8px 8px 8px 0px;
-	border-color: transparent var(--scrollbar_foreground_color) transparent transparent;
+	display: none;
+	/* border-width: 8px 8px 8px 0px; */
+	/* border-color: transparent var(--scrollbar_foreground_color) transparent transparent; */
 }
-::-webkit-scrollbar-button:single-button:horizontal:decrement:hover {
+/* ::-webkit-scrollbar-button:single-button:horizontal:decrement:hover {
 	border-color: transparent var(--scrollbar_hover_color) transparent transparent;
-}
+} */
 ::-webkit-scrollbar-button:single-button:horizontal:increment {
-	border-width: 8px 0px 8px 8px;
-	border-color: transparent transparent transparent var(--scrollbar_foreground_color);
+	display: none;
+	/* border-width: 8px 0px 8px 8px; */
+	/* border-color: transparent transparent transparent var(--scrollbar_foreground_color); */
 }
-::-webkit-scrollbar-button:horizontal:single-button:increment:hover {
+/* ::-webkit-scrollbar-button:horizontal:single-button:increment:hover {
     border-color: transparent transparent transparent var(--scrollbar_hover_color);
-}
+} */
 
 /* Firefox Scrollbar */
 
 * {
-	/* scrollbar-color: var(--scrollbar_foreground_color) var(--scrollbar_background_color); */
-	scrollbar-color: dark;
+	scrollbar-color: var(--scrollbar_foreground_color) var(--scrollbar_background_color);
 }
